...
        Spacer(modifier = Modifier.height(48.dp))

        // Campo Email o Username
        OutlinedTextField(
            value = credential,
            onValueChange = { credential = it },
            label = { Text("Email o Username") },
            modifier = Modifier.fillMaxWidth(),
            singleLine = true,
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Email),
        )

        Spacer(modifier = Modifier.height(16.dp))
...
            modifier = Modifier
                .fillMaxWidth()
                .height(56.dp),
            enabled = state !is LoginViewModel.LoginStateUI.Loading,
            colors = ButtonDefaults.buttonColors(containerColor = Color(0xFFFFD149)) // Color amarillo del mockup
        ) {
            Text("Ingresa", fontSize = 16.sp, fontWeight = FontWeight.Bold, color = Color.Black)
        }

        Spacer(modifier = Modifier.height(16.dp))

        // Estados de UI (Loading o Error general)
        when (val st = state) {
...
